# apps.core.preloaded.ug-wifi-direct

./: .project  AUTHORS  CMakeLists.txt  LICENSE  NOTICE  README  org.tizen.wifi-direct-popup.manifest  org.tizen.wifi-direct-popup.rule  org.tizen.wifi-direct-ugapp.manifest  org.tizen.wifi-direct-ugapp.rule  project.config
debian/: changelog  control  copyright  libug-setting-wifidirect-efl.install.in  libug-setting-wifidirect-efl.postinst  org.tizen.wifi-direct-popup.install.in  org.tizen.wifi-direct-ugapp.install.in  rules
packaging/: libug-setting-wifidirect-efl.changes  libug-setting-wifidirect-efl.spec  ug-setting-wifidirect-efl.spec  ug-wifi-direct.spec
popup-wifidirect/: CMakeLists.txt  org.tizen.wifi-direct-popup.desktop.in  org.tizen.wifi-direct-popup.xml
popup-wifidirect/include/: wfd-app-popup-view.h  wfd-app-strings.h  wfd-app-util.h  wfd-app.h
popup-wifidirect/po/: CMakeLists.txt  POTFILES.in  ar.po  as.po  az.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  de_DE.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_US.po  et.po  eu.po  fi.po  fr.po  fr_CA.po  fr_FR.po  ga.po  gl.po  gu.po  hi.po  hr.po  hu.po  hy.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  km.po  kn.po  ko_KR.po  lt.po  (+29 more)
popup-wifidirect/resources/: wfd_popup.edc
popup-wifidirect/src/: wfd-app-client.c  wfd-app-main.c  wfd-app-popup-view.c  wfd-app-util.c
ug-wifidirect/: CMakeLists.txt  setting-wifidirect-efl.xml  ug-setting-wifidirect-efl.xml
ug-wifidirect/include/: wfd_client.h  wfd_motion_control.h  wfd_ug.h  wfd_ug_view.h
ug-wifidirect/po/: CMakeLists.txt  ar.po  az.po  bg.po  ca.po  cs.po  da.po  de_DE.po  el_GR.po  en.po  en_GB.po  en_PH.po  es_ES.po  es_US.po  et.po  eu.po  fi.po  fr_CA.po  fr_FR.po  ga.po  gl.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it_IT.po  ja.po  ja_JP.po  ka.po  kk.po  ko_KR.po  lo.po  lt.po  lv.po  mk.po  ml.po  ms.po  my.po  (+25 more)
ug-wifidirect/resources/: wfd_ug.edc
ug-wifidirect/src/: wfd_client.c  wfd_motion_control.c  wfd_ug.c  wfd_ug_about_view.c  wfd_ug_genlist.c  wfd_ug_main_view.c  wfd_ug_multiconnect_view.c  wfd_ug_popup.c  wfd_ug_rename_popup.c  wfd_ug_view.c
ug-wifidirect/tables/: setting-wifidirect-efl_ChangeableColorTable.xml
ugapp-wifidirect/: CMakeLists.txt  org.tizen.wifi-direct-ugapp.xml
ugapp-wifidirect/include/: wfd-ugapp-util.h  wfd-ugapp.h
ugapp-wifidirect/src/: wfd-ugapp-main.c  wfd-ugapp-util.c
