CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(wifi-direct-popup C)
SET(PACKAGE_NAME org.tizen.wifi-direct-popup)

SET(PREFIX /usr/apps/${PACKAGE_NAME})
SET(BINDIR "${PREFIX}/bin")
SET(RESDIR "${PREFIX}/res")
SET(LOCALEDIR "${RESDIR}/locale")
SET(EDJDIR "${RESDIR}/edje")
SET(IMGDIR "${RESDIR}/images")

SET(SRCS
	src/wfd-app-main.c
	src/wfd-app-client.c
	src/wfd-app-util.c
	src/wfd-app-popup-view.c
)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)


SET(CMAKE_C_FLAGS "${CMAKE_CXX_FLAGS} ${EXTRA_CFLAGS} -DVITA_FEATURE -fPIE")
SET(CMAKE_C_FLAGS_DEBUG "-O0 -g -fPIE")
SET(CMAKE_C_FLAGS_RELEASE "-O2 -fPIE")

IF("${ARCH}" STREQUAL "arm")
	ADD_DEFINITIONS("-DTARGET")
	MESSAGE("add -DTARGET")
ENDIF("${ARCH}" STREQUAL "arm")

ADD_DEFINITIONS("-DPREFIX=\"${PREFIX}\"")
ADD_DEFINITIONS("-DRESDIR=\"${RESDIR}\"")

ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS})
SET(CMAKE_EXE_LINKER_FLAGS "-Wl,--as-needed -pie")
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${pkgs_LDFLAGS})
ADD_CUSTOM_TARGET(wfd_popup.edj
                COMMAND edje_cc -id ${CMAKE_CURRENT_SOURCE_DIR}/resources/images
                ${CMAKE_CURRENT_SOURCE_DIR}/resources/wfd_popup.edc ${CMAKE_BINARY_DIR}/wfd_popup.edj
                DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/resources/wfd_popup.edc
)
ADD_DEPENDENCIES(${PROJECT_NAME} wfd_popup.edj)
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${BINDIR})
INSTALL(FILES ${CMAKE_BINARY_DIR}/wfd_popup.edj DESTINATION ${EDJDIR})

#CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/${PACKAGE_NAME}.desktop.in ${CMAKE_BINARY_DIR}/${PACKAGE_NAME}.desktop)
#INSTALL(FILES ${CMAKE_BINARY_DIR}/${PACKAGE_NAME}.desktop DESTINATION /opt/share/applications)
#for appfw new manifest
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/${PACKAGE_NAME}.xml ${CMAKE_BINARY_DIR}/${PACKAGE_NAME}.xml)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/${PACKAGE_NAME}.xml DESTINATION "/usr/share/packages/")
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/resources/images/ DESTINATION ${IMGDIR})

ADD_SUBDIRECTORY(po)
